--- a/style.scss
+++ b/style.scss
@@ -111,6 +111,7 @@ body {
 
         h1 {
             text-align: center;
+            margin-top: 0;
         }
         .time-grp {
             gap: 22px;
